# alpha-api

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: build.yaml  deploy.yaml  docker-image.yml  pytest.yaml
.github/workflows/test/: pytest.yaml
app/: .dockerignore  Containerfile  entrypoint.sh  pyproject.toml
app/alpha_api/: av_client.py  config.py  logging.py  main.py
app/tests/: test_main.py
chart/avapi-chart/: Chart.yaml  values.yaml
chart/avapi-chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  secrets.yaml  service.yaml
temp/: NOTES.txt  delete_ingress.yaml
